feat:优化Keyset辅助工具
