# internal/tenant/handler/handler.go
@@ -116,7 +116,7 @@ func (h *HttpHandler) Update(ctx *gin.Context) {
 	response.Success(ctx)
 }
 
-// Paging godoc
+// ListByKeyset godoc
 // @Summary      获取用户的租户分页
 // @Tags         tenant
 // @Accept       json
@@ -126,24 +126,24 @@ func (h *HttpHandler) Update(ctx *gin.Context) {
 // @Param        prev_cursor   query     string  false  "用于上一页游标"
 // @Param        next_cursor   query     string  false  "用于下一页游标"
 // @Param        page_size  	 query     int     false  "页码"
-// @Success      200  {object}  response.successResponse{data=handler.PagingResponse} "请求成功"
+// @Success      200  {object}  response.successResponse{data=handler.KeysetPagingResponse} "请求成功"
 // @Failure      400  {object}  response.invalidParamsResponse "参数错误"
 // @Failure      500  {object}  response.errorResponse "服务器错误"
 // @Router       /v1/tenant [get]
-func (h *HttpHandler) Paging(ctx *gin.Context) {
+func (h *HttpHandler) ListByKeyset(ctx *gin.Context) {
 	userID, err := server.GetUserID(ctx)
 	if err != nil {
 		response.InvalidParams(ctx, err)
 		return
 	}
 
-	req := new(PagingRequest)
+	req := new(KeysetPagingRequest)
 
 	if err := bind.BindingRegularAndResponse(ctx, req); err != nil {
 		return
 	}
 
-	data, err := h.service.Paging(&domain.TenantPagingQuery{
+	data, err := h.service.ListByKeyset(&domain.TenantKeysetQuery{
 		CreatorID:  userID,
 		Keyword:    req.Keyword,
 		PrevCursor: req.PrevCursor,
@@ -156,7 +156,7 @@ func (h *HttpHandler) Paging(ctx *gin.Context) {
 		return
 	}
 
-	response.Success(ctx, domainTenantPagingToResponse(data))
+	response.Success(ctx, domainTenantKeysetToResponse(data))
 }
 
 // GetPlan godoc
